# OpenIPL

./: .gitattributes  .gitignore  CMakeLists.txt  DOCS.md  ImgLib.c  ImgLib.h  ImgLib.sln  ImgLib.vcxproj  ImgLib.vcxproj.filters  README.md  build.py  tests.c
ImgLib/x64/Debug/: ImgLib.exe.recipe  ImgLib.ilk  vc143.idb
ImgLib/x64/Debug/ImgLib.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImgLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ImgLib/x64/Release/: ImgLib.exe.recipe  ImgLib.iobj  ImgLib.ipdb
ImgLib/x64/Release/ImgLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImgLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
scripts/: build.py  start_build.bat  tests.c
src/: ImgLib.c  ImgLib.h  OpenIPL.c  OpenIPL.h  errors.c  errors.h  font.c  font.h  tools.c  tools.h
src/operations/: Turn90.c  Turn90.h  addText.c  adjustBrightness.c  adjustBrightness.h  adjustContrast.c  adjustContrast.h  bilinearInterpolation.c  bilinearInterpolation.h  chromaticAberration.c  chromaticAberration.h  gaussianBlur.c  gaussianBlur.h  grayscale.c  grayscale.h  negative.c  negative.h  pixelate.c  sepiaFilter.c  sepiaFilter.h  sharpen.c  sharpen.h  sobelFilter.c  sobelFilter.h  tint.c  tint.h  toBlackAndWhite.c  toBlackAndWhite.h  toMirror.c  toMirror.h  vignette.c
