cmake_minimum_required(VERSION 3.10)

project(ImgLib VERSION 1.0 LANGUAGES C)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(ImgLib STATIC ImgLib.c)

set_target_properties(ImgLib PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib
)

set_target_properties(ImgLib PROPERTIES VERSION ${PROJECT_VERSION})